# leetcode-srs

./: .env.example  .gitignore  LICENSE  README.md  prepare.py  pyproject.toml  run.py  setup.py  validate_tests.py
.claude/: settings.local.json
data/: srs.json
data-back/: problems.json
data-back/attempts/: contains-duplicate.py  two-sum.py
data-back/editorials/: custom-concurrent-downloads.txt  custom-csv-data-wrangling.txt  custom-generators-output.txt  custom-implement-zip.txt
data-back/explanations/: two-sum.txt
data-back/solutions/: custom-concurrent-downloads.py  custom-csv-data-wrangling.py  custom-generators-output.py  custom-implement-zip.py
src/: data.py  fetch.py  problem_list.py  runner.py  sql_runner.py  sql_tests.py  tests.py  tui.py
src/neetcode_offline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
